--- a/02-express-tutorial/package.json
+++ b/02-express-tutorial/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "expres": "^0.0.5",
+    "express": "^4.17.1",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
